--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,14 +9,25 @@
         </header>
         <main role="main">
             <article>
-                <div>
+                <div class=user-info>
                     <img src="http://naserca.com/images/sharky_j.jpg" alt="sharky_j">
                     <h2>sharky_j</h2>
                     <h3>15 minutes ago</h3>
                 </div>
-                <a href="#">
+                <a class="photo" href="#">
                     <img src="http://naserca.com/images/shark.png" alt="post from sharky_j">
                 </a>
+                <div class="actions">
+                    0 likes
+                    <span class="comment-count">0 comments</span>
+                </div>
+                <ul class="comments">
+                    <li>
+                        <p>
+                            sharky_j: Out for the long weekend... too embarassed to show ya'll the beach bod
+                        </p>
+                    </li>
+                </ul>
             </article>
         </main>
     </body>
